# OpenEnv-Hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  publish_dataset.py  pyproject.toml
core/: cicd_environment.py  constants.py  graders.py  pipeline_simulator.py
scenarios/: __init__.py  registry.py
server/: __init__.py  app.py  cicd_environment.py  pipeline_simulator.py  requirements.txt
tests/: conftest.py  test_app.py  test_episode.py  test_graders.py  test_scenarios.py  test_simulator.py
